order.yml
apiVersion: v1
kind: Service
metadata:
  name: order
  labels:
    app: order
    service: order
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: order
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-v1
  labels:
    app: order
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order
      version: v1
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: order
        version: v1
    spec:
      serviceAccountName: order-servuceaccount
      containers:
      - name: order
        image: image-registry.openshift-image-registry.svc:5000/mesh/order@sha256:8a58a8ecdd795a4ae657a63bf8e4d40ac7543c603255089016cee59a89e18fc7
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
